--- a/css/layout.css
+++ b/css/layout.css
@@ -129,6 +129,9 @@ main, aside {
 /*  ========================================================================  *\
     @ M E D I A  Q U E R I E S  ~  7 6 8 p x
 \*  ========================================================================  */
+/*  ========================================================================  *\
+    H E A D E R  ~  7 6 8 p x
+\*  ========================================================================  */
 
 @media (max-width: 768px) {
     header {
@@ -136,15 +139,15 @@ main, aside {
         position:       relative;
     
         width:          auto;
-        height:         70vh;
+        height:         73vh;
         margin-top:     19vh;
         margin-right:   2vh;
-        margin-bottom:  11vh;
+        margin-bottom:  8vh;
         margin-left:    2vh;
         padding:        0 auto;
     
-        border-top:     0.555vh solid rgba(0, 0, 0, 0.625);  /*  4px  */
-        border-bottom:  0.555vh solid rgba(0, 0, 0, 0.625);  /*  4px  */
+        border-top:     0.555vh solid darkslateblue;  /*  4px  */
+        border-bottom:  0.555vh solid darkslateblue;  /*  4px  */
         border-radius:  0vh 15vh 0vh 15vh;
     }
     
@@ -208,8 +211,13 @@ main, aside {
             height:         auto;
             padding:        4vh 0vh 4vh 0vh;
     
-            border-top:     0.2vh solid rgba(0, 0, 0, 0.625);
+            border-top:     0.2vh solid darkslateblue;
         }
+
+
+/*  ========================================================================  *\
+    M A I N  -  7 6 8 p x
+\*  ========================================================================  */
 
     main {
         grid-area:      main;
@@ -226,12 +234,12 @@ main, aside {
         height:         auto;
         margin-top:     0vh;
         margin-right:   2vh;
-        margin-bottom:  11vh;
+        margin-bottom:  8vh;
         margin-left:    2vh;
         padding:        2vh 2vh 6vh 2vh;
 
-        border-top:     0.555vh solid rgba(0, 0, 0, 0.625);  /*  4px  */
-        border-bottom:  0.555vh solid rgba(0, 0, 0, 0.625);  /*  4px  */
+        border-top:     0.555vh solid darkslateblue;  /*  4px  */
+        border-bottom:  0.555vh solid darkslateblue;  /*  4px  */
     }
     
         .student-countainer,
@@ -240,6 +248,10 @@ main, aside {
             height:   auto;
             margin:   0 auto;
             padding:  2vh 0vh 2vh 0vh;
+        }
+
+        .border-top {
+            border-top:  0.2vh solid darkslateblue;
         }
     
             .student-item, 
